# chronovista

./: .dockerignore  .env.example  .git-blame-ignore-revs  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  Makefile  README.md  alembic-dev.ini  alembic.ini  docker-compose.dev.yml  docker-compose.yml  entrypoint.sh  mkdocs.yml  mypy.ini  pyproject.toml  pytest-integration.ini  pytest.ini  setup.sh
.github/workflows/: docs.yml  test.yml
contracts/: README.md
docs/: README.md  changelog.md  contributing.md  glossary.md  index.md  troubleshooting.md
docs/api/: error-responses.md  index.md  rfc7807-migration.md
docs/api/cli/: commands.md
docs/api/models/: channel.md  topic.md  transcript.md  video.md
docs/api/repositories/: base.md  channel.md  video.md
docs/api/services/: takeout.md  transcript.md  youtube.md
docs/architecture/: api-integration.md  data-model.md  frontend-architecture.md  overview.md  system-design.md
docs/development/: code-style.md  database.md  documentation.md  frontend-development.md  index.md  makefile-reference.md  setup.md  testing.md  type-checking.md
docs/getting-started/: configuration.md  installation.md  prerequisites.md  quickstart.md  youtube-api-setup.md
docs/guides/: migrating-to-docker.md
docs/maintaining/: index.md  release-process.md  versioning.md
docs/stylesheets/: extra.css
docs/user-guide/: authentication.md  cli-overview.md  corrections.md  data-population.md  data-sync.md  exporting.md  google-takeout.md  rest-api.md  topic-analytics.md  transcripts.md
frontend/: .env.example  .gitignore  README.md  index.html  orval.config.ts  package-lock.json  package.json  tailwind.config.ts  tsconfig.build.json  tsconfig.json  vite.config.ts  vitest.config.ts
frontend/coverage/: coverage-final.json  index.html  usePlaylists.ts.html
frontend/coverage/config/: index.html  search.ts.html
frontend/coverage/hooks/: index.html  useSearchDescriptions.ts.html
frontend/scripts/: fix-recovery-tests.js  fix_recovery_tests.py
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/api/: batchCorrections.ts  config.ts  entityMentions.ts  onboarding.ts  settings.ts
frontend/src/components/: AuthErrorState.tsx  AvailabilityBadge.tsx  CategoryDropdown.tsx  ChannelCard.tsx  ClassificationSection.tsx  ContextExpander.tsx  EmptyState.tsx  EntityMentionsPanel.tsx  ErrorBoundary.tsx  ErrorState.tsx  FilterPills.tsx  FilterToggle.tsx  HighlightedText.tsx  LoadingState.tsx  PlaylistCard.tsx  PlaylistFilterTabs.tsx  PlaylistMembershipList.tsx  PlaylistSortDropdown.tsx  PlaylistTypeBadge.tsx  PlaylistVideoCard.tsx  PrivacyBadge.tsx  SearchEmptyState.tsx  SearchErrorState.tsx  SearchFilters.tsx  SearchInput.tsx  SearchResult.tsx  SearchResultList.tsx  SearchResultSkeleton.tsx  SearchSection.tsx  SkipLink.tsx  SortDropdown.tsx  TagAutocomplete.tsx  TopicCombobox.tsx  UnavailabilityBanner.tsx  VideoCard.tsx  VideoFilters.tsx  VideoGrid.tsx  VideoList.tsx  VideoSearchResult.tsx  index.ts
frontend/src/config/: search.ts
frontend/src/constants/: entityTypes.ts
frontend/src/hooks/: index.ts  useAppInfo.ts  useBatchApply.ts  useBatchHistory.ts  useBatchPreview.ts  useBatchRebuild.ts  useCacheStatus.ts  useCanonicalTagDetail.ts  useCanonicalTags.ts  useCategories.ts  useChannelDetail.ts  useChannelVideos.ts  useChannels.ts  useCorrectSegment.ts  useCrossSegmentCandidates.ts  useDebounce.ts  useDeepLinkParams.ts  useDiffAnalysis.ts  useEntityDetail.ts  useEntityMentions.ts  useEntitySearch.ts  useLanguagePreferences.ts  useMergePreview.ts  useMergeTags.ts  useOnboarding.ts  useOnlineStatus.ts  usePhoneticMatches.ts  usePlaylistDetail.ts  usePlaylistVideos.ts  usePlaylists.ts  usePrefersReducedMotion.ts  useRevertSegment.ts  useSearchDescriptions.ts  useSearchSegments.ts  useSearchTitles.ts  useSegmentCorrectionHistory.ts  useSidebarCategories.ts  useTags.ts  useTopics.ts  useTranscript.ts  (+10 more)
frontend/src/lib/: preloadErrorReload.ts  queryClient.ts
frontend/src/locales/: en.json  index.ts
frontend/src/styles/: card.ts  (+4 more)
frontend/tests/: test-utils.tsx
scripts/: dev_setup.sh  gen_api_ref.py  gen_cli_ref.py  gen_ref_pages.py  init-dev-db.sql  pgadmin-servers.json  run-integration-tests.sh  run-unit-tests.sh  setup-integration-db.sh
scripts/utilities/: backfill_batch_ids.py  reclassify_asr_corrections.py
specs/009-cli-language-preferences/: tasks.md
src/chronovista/: __init__.py  container.py  exceptions.py
tests/: __init__.py  conftest.py
tests/auth/: test_auth.py
tests/cli/: test_auth_commands.py  test_cli.py  test_main.py  test_sync_commands.py
tests/config/: test_settings.py
tests/db/: test_db.py
tests/factories/: __init__.py  batch_correction_factory.py  canonical_tag_factory.py  channel_factory.py  channel_keyword_factory.py  channel_topic_factory.py  entity_alias_factory.py  entity_mention_factory.py  entity_operation_log_factory.py  id_factory.py  named_entity_factory.py  named_entity_orm_factory.py  playlist_factory.py  tag_alias_factory.py  tag_operation_log_factory.py  takeout_data_factory.py  takeout_playlist_factory.py  takeout_playlist_item_factory.py  takeout_subscription_factory.py  takeout_watch_entry_factory.py  topic_category_factory.py  transcript_correction_factory.py  transcript_segment_factory.py  user_language_preference_factory.py  user_video_factory.py  video_factory.py  video_localization_factory.py  video_tag_factory.py  video_topic_factory.py  video_transcript_factory.py
tests/integration/: README.md  conftest.py  test_batch_corrections.py  test_docker_stack.py  test_language_download_integration.py  test_playlist_integration.py  test_segment_migration.py  test_transcript_corrections.py  test_transcript_sync_preferences.py
tests/models/: test_models.py
tests/performance/: README.md  conftest.py  test_topic_hierarchy.py  test_transcript_query_performance.py
tests/services/: test_channel_seeder.py  test_seeding_orchestrator.py  test_services.py  test_takeout_seeding_service.py  test_transcript_service.py
tests/unit/: test_container.py  test_exceptions.py
(+740 files in other folders)
